JavaScriptCore:

Reviewed by Oliver.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=14897
        Decompilation of double negation fails and produces invalid or incorrect code

        Test: fast/js/function-decompilation-operators.html

        * kjs/nodes2string.cpp:
        (UnaryPlusNode::streamTo): Put space after unary operator.  Matches Firefox.
        (NegateNode::streamTo): Diito.
        (MultNode::streamTo): Put spaces around binary operator.  Matches Firefox.
        (AddNode::streamTo): Ditto.

LayoutTests:

        Reviewed by Oliver.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14897
        Decompilation of double negation fails and produces invalid or incorrect code

        * fast/js/function-decompilation-operators-expected.txt: Added.
        * fast/js/function-decompilation-operators.html: Added.



Canonical link: https://commits.webkit.org/19489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24924 268f45cc-cd09-0410-ab3c-d52691b4dbfc