JavaScriptCore/kjs/nodes2string.cpp
@@ -394,12 +394,12 @@ void PrefixErrorNode::streamTo(SourceStream& s) const
 
 void UnaryPlusNode::streamTo(SourceStream &s) const
 {
-  s << "+" << expr;
+  s << "+ " << expr;
 }
 
 void NegateNode::streamTo(SourceStream &s) const
 {
-  s << "-" << expr;
+  s << "- " << expr;
 }
 
 void BitwiseNotNode::streamTo(SourceStream &s) const
@@ -414,12 +414,12 @@ void LogicalNotNode::streamTo(SourceStream &s) const
 
 void MultNode::streamTo(SourceStream &s) const
 {
-  s << term1 << oper << term2;
+  s << term1 << " " << oper << " " << term2;
 }
 
 void AddNode::streamTo(SourceStream &s) const
 {
-  s << term1 << oper << term2;
+  s << term1 << " " << oper << " " << term2;
 }
 
 void ShiftNode::streamTo(SourceStream &s) const
